feat: enhance query and delete functions, update api docs and frontend
